@@ -29,7 +29,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "file-ops.h"
 #include "str-vec.h"
 
-#include "defaults.h"
+#include <defaults.h>
 #include "dir-ops.h"
 #include "dirfns.h"
 #include "error.h"
