@@ -42,7 +42,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include "str-vec.h"
 
-#include "defaults.h"
+#include <defaults.h>
 #include "defun.h"
 #include "dirfns.h"
 #include "error.h"
