@@ -33,7 +33,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include "procstream.h"
 
-#include "defaults.h"
+#include <defaults.h>
 #include "defun.h"
 #include "error.h"
 #include "gripes.h"
