@@ -1,3 +1,11 @@
+Fri Nov  8 18:09:12 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* file-ops.cc: Change #include "" to #include <> for safe-lstat.h
+	and safe-stat.h, to avoid getting them from $srcdir when we really
+	want the version from the build directory.  (Maybe this should be
+	done for all the include files, not just those that are
+	auto-generated?  Hmm.)
+
 Thu Nov  7 10:45:11 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Version 1.91.
